Fix X-Overflow on Dates

--- a/css/styles.css
+++ b/css/styles.css
@@ -11304,6 +11304,7 @@ textarea.form-control-lg {
 html {
   height: 100%;
   scroll-padding-top: calc(4.5rem - 1px);
+  overflow-x: hidden;
 }
 
 body {
